src/components/NavigationFilter/NavigationFilter.module.scss
.navigationFilter {
	--navigation-filters-gap: var(--s-3);
	display: flex;
	align-items: center;
	gap: var(--navigation-filters-gap);

	> p {
		color: var(--c-white-accent);
	}
}

.options {
	display: flex;
	align-items: center;
	margin-inline-start: calc(-1 * var(--navigation-filters-gap));
	padding-inline-start: var(--navigation-filters-gap);
	gap: var(--s-2);

	pointer-events: none;
	max-width: 0;
	transition: max-width 0.3s ease-in-out;
	white-space: nowrap;
	overflow: hidden;
	transition-delay: 0.05s;

	> button {
		opacity: 0;
		transform: translateX(80px);
		transition:
			transform 0.25s,
			opacity 0.2s;
	}

	&[aria-expanded="true"] {
		max-width: 800px;
		transition-delay: 0s;
		overflow: visible;
		pointer-events: auto;

		> button {
			opacity: 1;
			transform: translateX(0);
		}
	}

	@for $i from 1 through 4 {
		button:nth-child(#{$i}) {
			transition-duration: $i * 0.2s;
		}
	}
}

.toggle {
	display: flex;
	justify-content: center;
	align-items: center;
	gap: var(--s-2);
	position: relative;
	z-index: 1;

	svg {
		transition: transform 0.25s ease-out;
	}

	> span {
		display: none;
		color: var(--c-white-accent, #b8b7ad);
		transition: color 0.25s ease-out;
	}

	&[aria-pressed="true"] > span {
		color: var(--c-stroke-gray, #b8b7ad);
	}

	&[aria-pressed="true"] .filterText {
		color: var(--c-dark-gray, #1f1f1f);
	}

	&[aria-pressed="true"] svg {
		transform: rotate(90deg);
	}
}

.filterText {
	transition: color 0.3s ease-out;
	display: flex;
	align-items: center;
	gap: var(--s-1);
	color: var(--c-white);
	font-size: 16px;
	font-weight: 500;
}

@media screen and (max-width: 700px) {
	.navigationFilter {
		padding: 12px 16px;
		background: #222;
		flex-direction: column;
		gap: 0;

		> p {
			display: none;
		}
	}

	.toggle {
		border: none;
		width: 100%;
		justify-content: space-between;

		> span {
			display: inline;
		}

		&[aria-pressed="true"] svg {
			transform: rotate(180deg);
		}
	}

	.options {
		gap: var(--s-1);
		max-width: 100%;
		max-height: 0;
		transition:
			max-height 0.3s ease-out,
			margin-top 0.3s ease-out;
		flex-direction: column;
		width: 100%;
		margin-inline: auto;
		padding-inline-start: 0;

		&[aria-expanded="true"] {
			max-width: 100%;
			max-height: 800px;
			margin-top: var(--s-2);
		}

		> button {
			width: 100%;
		}
	}
}

